// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check confirmRemoveLayer 1`] = `
Object {
  "dimensions": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    8,
    9,
    10,
    12,
  ],
  "indexLayerToRemove": 1,
  "isConfirmRemoveLayer": false,
  "isConfirmRemovePositions": false,
  "mosaic": Object {
    "id": "1",
    "layers": Array [
      Object {
        "dimension": 4,
        "positions": Array [
          Object {
            "h": 2,
            "i": "1",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 2,
            "y": 1,
          },
          Object {
            "h": 2,
            "i": "2",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 0,
            "y": 1,
          },
        ],
        "visible": true,
      },
      Object {
        "dimension": 4,
        "positions": Array [
          Object {
            "h": 2,
            "i": "3",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 2,
            "y": 1,
          },
          Object {
            "h": 2,
            "i": "4",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 0,
            "y": 1,
          },
        ],
        "visible": true,
      },
    ],
    "lowLayersVisibility": true,
    "selectedLayer": 1,
  },
  "selectedPosition": "",
}
`;

exports[`check confirmRemovePositions 1`] = `
Object {
  "dimensions": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    8,
    9,
    10,
    12,
  ],
  "indexLayerToRemove": undefined,
  "isConfirmRemoveLayer": false,
  "isConfirmRemovePositions": false,
  "mosaic": Object {
    "id": "1",
    "layers": Array [
      Object {
        "dimension": 4,
        "positions": Array [
          Object {
            "h": 2,
            "i": "3",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 2,
            "y": 1,
          },
          Object {
            "h": 2,
            "i": "4",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 0,
            "y": 1,
          },
        ],
        "visible": true,
      },
      Object {
        "dimension": 4,
        "positions": Array [
          Object {
            "h": 2,
            "i": "1",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 2,
            "y": 1,
          },
          Object {
            "h": 2,
            "i": "2",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 0,
            "y": 1,
          },
        ],
        "visible": true,
      },
      Object {
        "dimension": 4,
        "positions": Array [],
        "visible": true,
      },
    ],
    "lowLayersVisibility": true,
    "selectedLayer": 2,
  },
  "selectedPosition": "",
}
`;

exports[`check removeLayer 1`] = `
Object {
  "dimensions": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    8,
    9,
    10,
    12,
  ],
  "indexLayerToRemove": undefined,
  "isConfirmRemoveLayer": false,
  "isConfirmRemovePositions": false,
  "mosaic": Object {
    "id": "1",
    "layers": Array [
      Object {
        "dimension": 4,
        "positions": Array [
          Object {
            "h": 2,
            "i": "1",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 2,
            "y": 1,
          },
          Object {
            "h": 2,
            "i": "2",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 0,
            "y": 1,
          },
        ],
        "visible": true,
      },
      Object {
        "dimension": 4,
        "positions": Array [
          Object {
            "h": 2,
            "i": "3",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 2,
            "y": 1,
          },
          Object {
            "h": 2,
            "i": "4",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 0,
            "y": 1,
          },
        ],
        "visible": true,
      },
    ],
    "lowLayersVisibility": true,
    "selectedLayer": 1,
  },
  "selectedPosition": "",
}
`;

exports[`check removeLayerPositions 1`] = `
Object {
  "dimensions": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    8,
    9,
    10,
    12,
  ],
  "indexLayerToRemove": undefined,
  "isConfirmRemoveLayer": false,
  "isConfirmRemovePositions": false,
  "mosaic": Object {
    "id": "1",
    "layers": Array [
      Object {
        "dimension": 4,
        "positions": Array [
          Object {
            "h": 2,
            "i": "3",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 2,
            "y": 1,
          },
          Object {
            "h": 2,
            "i": "4",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 0,
            "y": 1,
          },
        ],
        "visible": true,
      },
      Object {
        "dimension": 4,
        "positions": Array [
          Object {
            "h": 2,
            "i": "1",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 2,
            "y": 1,
          },
          Object {
            "h": 2,
            "i": "2",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 0,
            "y": 1,
          },
        ],
        "visible": true,
      },
      Object {
        "dimension": 4,
        "positions": Array [],
        "visible": true,
      },
    ],
    "lowLayersVisibility": true,
    "selectedLayer": 2,
  },
  "selectedPosition": "",
}
`;

exports[`check selectPosition 1`] = `
Object {
  "dimensions": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    8,
    9,
    10,
    12,
  ],
  "indexLayerToRemove": undefined,
  "isConfirmRemoveLayer": false,
  "isConfirmRemovePositions": false,
  "mosaic": Object {
    "id": "1000",
    "layers": Array [
      Object {
        "dimension": 3,
        "positions": Array [],
        "visible": true,
      },
    ],
    "lowLayersVisibility": true,
    "selectedLayer": 0,
  },
  "selectedPosition": "1",
}
`;

exports[`check setMosaic 1`] = `
Object {
  "dimensions": Array [
    1,
    2,
    3,
    4,
    5,
    6,
    8,
    9,
    10,
    12,
  ],
  "indexLayerToRemove": undefined,
  "isConfirmRemoveLayer": false,
  "isConfirmRemovePositions": false,
  "mosaic": Object {
    "id": "1",
    "layers": Array [
      Object {
        "dimension": 4,
        "positions": Array [
          Object {
            "h": 2,
            "i": "4",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 0,
            "y": 1,
          },
          Object {
            "h": 2,
            "i": "3",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 2,
            "y": 1,
          },
        ],
        "visible": true,
      },
      Object {
        "dimension": 4,
        "positions": Array [
          Object {
            "h": 2,
            "i": "2",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 0,
            "y": 1,
          },
          Object {
            "h": 2,
            "i": "1",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 2,
            "y": 1,
          },
        ],
        "visible": true,
      },
      Object {
        "dimension": 4,
        "positions": Array [
          Object {
            "h": 2,
            "i": "6",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 0,
            "y": 1,
          },
          Object {
            "h": 2,
            "i": "5",
            "maxH": undefined,
            "maxW": undefined,
            "role": 0,
            "w": 2,
            "x": 2,
            "y": 1,
          },
        ],
        "visible": true,
      },
    ],
    "lowLayersVisibility": true,
    "selectedLayer": 2,
  },
  "selectedPosition": "",
}
`;
